scrollbar fixes

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -17,8 +17,17 @@ body {
 html {
   /* background-color: hsl(0 0% 8.5%); */
   background-color: black;
-  overflow-y: hidden;
-  overflow-x: hidden;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 @keyframes fadeIn {
